--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,14 +1,51 @@
 .cover__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 1184px;
+  min-height: 740px;
   margin: 0 auto;
-  max-width: fit-content;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #fff;
   text-decoration: none;
+}
+
+.cover__link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2a2c2f;
+  opacity: 0.3;
+  transition: opacity 0.4s;
+  z-index: 1;
+}
+
+.cover__link:hover.cover__link::after {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 1279px) {
   .cover__link {
     width: 100%;
-    max-width: 100%;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    min-height: 200px;
   }
 }
