--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,12 @@
   font-size: 24px;
   line-height: 1.17;
   color: #fff;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
