--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 28px 48px 56px 48px;
+  max-width: 1184px;
+  width: calc(100% - 96px);
+  margin: 28px auto 56px auto;
 }
 
 @media screen and (max-width: 1279px) {
@@ -12,15 +14,13 @@
 
 @media screen and (max-width: 1023px) {
   .header {
-    margin-left: 24px;
-    margin-right: 24px;
+    width: calc(100% - 48px);
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
     margin-top: 16px;
-    margin-right: 16px;
-    margin-left: 16px;
+    width: calc(100% - 32px);
   }
 }
