--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,8 @@
 .photo-grid {
   margin: 0 auto 92px auto;
+  padding: 0;
   max-width: 1184px;
+  list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
